This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-01-15:

- [v1.1] The $RANDOM pseudorandom numbers are now generated by nrand48(3)
  instead of rand_r(3). Since POSIX specifies a particular pseudorandom
  generator for nrand48, this means the same pseudorandom sequence should now
  be generated on all platforms if RANDOM is assigned the same seed value.

2025-01-08:

- Fixed buggy emacs mode behaviour on exceeding the maximum line length.

2025-01-07:

- Fixed the expansion ${variable//""/string}; since the shell pattern is
  empty, this should output the value of the variable unchanged, and now
  once again does. Bug introduced on 2023-03-29.

- Fixed multibyte processing in the expansion ${variable//~(E)/string},
  i.e., the pattern is an empty Extended Regular Expression (ERE). This
  now inserts string between each character instead of each byte.

2025-01-05:

- Fixed a crash that could occur if a discipline function was first assigned
  to a variable in a virtual subshell before the variable was scoped to that
  subshell, then upon subshell completion another discipline function of the
  same type was assigned to that selfsame variable in the parent shell.

2025-01-03:

- The performance of virtual subshells has been significantly improved by
  avoiding unnecessary syscalls to save and restore the working directory.
  Thanks to Johnothan King for backporting and improving the AT&T 93v- code.

2024-12-30:

- The KEYBD trap should now be fully functional for multibyte characters
  (for example, non-Latin characters in UTF-8 locales). This fixes a bug
  inherited from AT&T and worked around on 2022-02-12.

2024-12-29:

- [v1.1] The emacs ^Y command now accepts a numeric parameter. For example,
  ESC 10 ^Y will now "yank" (paste) the latest deleted text 10 times.

2024-12-25:
