@@ -2,6 +2,13 @@ This documents significant changes in the dev branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2025-03-20:
+
+- Fixed a corner case bug in ksh's printf built-in: if there was a gap in
+  index conversion specifiers (for example, %5$s, the string with index 5,
+  given without %4$s, %3%s or %2%s), then ksh incorrectly executed the
+  string arguments corresponding to the gap as arithmetic expressions.
+
 2025-01-15:
 
 - [v1.1] The $RANDOM pseudorandom numbers are now generated by nrand48(3)
